--- a/public/stylesheets/landingpage.css
+++ b/public/stylesheets/landingpage.css
@@ -1738,7 +1738,7 @@ customers-cards:before {
   line-height: 35px;
   font-family: 'Playfair Display', serif;
   color: #ffffff;
-  padding: 1.5rem;
+  padding: 2rem 1rem;
   font-weight: 700;
   margin-bottom: 27px; 
 }
