fixingi activation mail

--- a/views/emails/passwordReset.ejs
+++ b/views/emails/passwordReset.ejs
@@ -45,7 +45,7 @@
                  </p>
 
                  <p style="font-size:12px; padding: 1rem; font-style: italic; color:#380552; word-break:normal">
-                  Si vous n'avez pas demandé une réinitialisation de mot de passe, veuillez ignoré ce message.
+                  Si vous n'avez pas demandé une réinitialisation de mot de passe, veuillez ignorer ce message.
                  </p>
                 </td>
                </tr>
