--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -8,11 +8,12 @@
 <div id="login-wrapper" class="">
   <div class="join">
     <h1 class="join-text">
-      Rejoignez-nous et faîtes-vous former par les meilleurs 😉
+      Rejoignez-nous et parlez Anglais naturellement en 6 mois 😉
     </h1>
+    <!--
     <div class="program-inscription-wrapper">
       <a class="pas-compte mx-2 my-2 btn" href="#footer">Contactez-nous pour s'inscrire à un programme</a>
-    </div>
+    </div>-->
   </div>
   <div class="login-div">
     <h1 class="text-center" id="login-header">CONNEXION</h1>
