--- a/public/stylesheets/pecp/home.css
+++ b/public/stylesheets/pecp/home.css
@@ -218,7 +218,13 @@ margin: 4rem;
 .card_title {
     font-weight: normal;
     font-size: 36px;
+    text-align: center;
+    background-color: #07609f;
     margin-bottom: 20px;
+    border-radius: 10px;
+    padding: 0.5rem ;
+  font-family: "Titan One", cursive;
+
 }
 
 .pricing {
