--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -243,7 +243,9 @@
               <p class="program-description">
                 Un programme pratique et efficace pour l'amélioration continue du niveau d'Anglais du personnel des entreprises au sein de leurs espaces de travail.
               </p>
-                <a href="/englishlang4all/clubs/home" class="course-btn">En Savoir Plus</a>
+                <!-- <a href="/englishlang4all/clubs/home" class="course-btn">En Savoir Plus</a> -->
+                <a href="/englishlang4all/clubs/Burkina-Faso/hubs" class="course-btn">En Savoir Plus</a>
+                
            
             </div>
           </div>
