--- a/views/programs/englishlang4all/englishClubs/showClubHub.ejs
+++ b/views/programs/englishlang4all/englishClubs/showClubHub.ejs
@@ -3,11 +3,9 @@
 <style>
   .hub-country-banner {
     background: linear-gradient(to bottom,
-        rgba(39, 49, 51, 0.714),
-        rgba(38, 44, 44, 0.574),
-        rgba(56, 66, 66, 0.554),
-        rgba(42, 45, 46, 0.67)),
-      url("https://corporate.yourtravelgroup.co.uk/wp-content/uploads/2017/01/blog-image.png") top center;
+        rgba(21, 18, 29, 0.439),
+        rgba(20, 21, 59, 0.339)),
+      url("https://thegtcgroup.com/wp-content/uploads/2020/07/GTC-Group-Training-Consulting-Energy-Consulting.jpg") top center;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -20,8 +18,8 @@
   .hub-country {
     color: rgb(252, 252, 252);
     text-shadow: 1px 2px 3px black;
-    font-size: 10rem;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 4rem;
+ font-family: 'Poppins', sans-serif;
   }
 
   .club-type-list {
@@ -158,7 +156,7 @@
 </style>
 <!-- banner-->
 <div class="hub-country-banner d-flex justify-content-center align-items-center">
-  <h2 class="hub-country"> <%= hubCountry %> </h2>
+  <h2 class="hub-country"> Natural English at Work </h2>
 </div>
 
 <div class="univ-eng-clubs">
