--- a/views/programs/pecp/home.ejs
+++ b/views/programs/pecp/home.ejs
@@ -83,13 +83,13 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-              <h1 class="text-center py-3 bg-dark text-white">PECP Program Director Contact</h1>
+              <h1 class="text-center py-3 bg-primary text-white">Service Commercial Afro Language Lab</h1>
               <hr>
               <div class="d-flex  justify-content-around" style="background-color: white;">
                 <button id="" class="bg-white">
                   <a id="" class=" fs-5" style="color: rgb(88, 7, 139);"
                     href="mailto:afrohouseofknowledge@gmail.com?"><i class="fa mx-2 p-3 fa-envelope-o" id=""
-                      aria-hidden="true"></i><span>Mail</span></a>
+                      aria-hidden="true"></i><span>afrohouseofknowledge@gmail.com</span></a>
                 </button>
 
                 <button id="" class="bg-white">
@@ -102,7 +102,7 @@
                   <a id="" class="text-success  fs-5" style="text-decoration: none;" href="https://wa.me/22653344444"
                     target="_blank">
                     <i class="fa mx-2 p-3 fa-whatsapp" aria-hidden="true"></i>
-                    <span class="">WhatsApp</span></a>
+                    <span class="">(226) 53344444</span></a>
                 </button>
 
               </div>
@@ -211,7 +211,6 @@
     </div>
   </section>
 
-
     <!-- ======= Why Us Section ======= -->
   
     <section id="why-us" class="why-us" style="background-color: white;">
@@ -255,7 +254,7 @@
                   <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-1"><span>01</span> Identification de vos forces et lacunes <i class="fa-solid icon-show fa-chevron-up"></i><i class="fa-solid icon-close fa-chevron-down"></i></a>
                   <div id="accordion-list-1" class="collapse show" data-bs-parent=".accordion-list">
                     <p>
-                      Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                      Avant toute chose, il est primordiale de savoir oú vous en êtes dans votre processus d'amélioration de niveau en Anglais. Un test d'évaluation de niveau est fait pour identifier vos forces et faiblesses en matiere de communication en Anglais. 
                     </p>
                   </div>
                 </li>
@@ -264,7 +263,7 @@
                   <a data-bs-toggle="collapse" data-bs-target="#accordion-list-2" class="collapsed"><span>02</span> Un coach d'Anglais à votre disposition<i class="fa-solid icon-show fa-chevron-up"></i><i class="fa-solid icon-close fa-chevron-down"></i></a>
                   <div id="accordion-list-2" class="collapse" data-bs-parent=".accordion-list">
                     <p>
-                      Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                      Après avoir identifié vos besoins, Il vous sera assigné un coach d'Anglais qui est chargé de vous coacher, suivre votre progression et vous pousser à atteindre les objectifs fixés.
                     </p>
                   </div>
                 </li>
@@ -273,7 +272,7 @@
                   <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3" class="collapsed"><span>03</span> Un programme d'apprentissage souple et flexible <i class="fa-solid icon-show fa-chevron-up"></i><i class="fa-solid icon-close fa-chevron-down"></i></a>
                   <div id="accordion-list-3" class="collapse" data-bs-parent=".accordion-list">
                     <p>
-                      Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                    Le programme d'apprentissage est souple et et assez flexible pour s'adapter à votre disponibilité. 
                     </p>
                   </div>
                 </li>
@@ -298,14 +297,15 @@
     <div class="container">
       <div class="grid">
         <div class="card">
-          <h2 class="card_title">Basic</h2>
+          <h2 class="card_title">Conversation Courante</h2>
           <p class="pricing">30.000 Fcfa<span class="small">/par mois</span></p>
+          <p>Anglais pour la communication courante</p>
           <p>Minimum 6 mois</p>
           <p>Ideal pour Débutant</p>
           <p>Apprentissage à un rythme normal</p>
           <hr>
           <ul class="features">
-            <li>Anglais General</li>
+            <li>Anglais Général</li>
             <li>Accès au cours en ligne</li>
             <li>2 Séances de cours / semaine</li>
             <li>2 Séances de conversation / semaine</li>
@@ -316,8 +316,9 @@
           <!-- <a href="#" class="cta_btn">Buy Now</a> -->
         </div>
         <div class="card">
-          <h2 class="card_title"> Pro </h2>
+          <h2 class="card_title"> Conversation Technique </h2>
           <p class="pricing">45.000 Fcfa<span class="small">/mois</span></p>
+          <p>Anglais technique pour besoin professionel</p>
           <p>Minimum 3 mois</p>
           <p>Idéal pour Professionnel</p>
           <p>Apprentissage à un rythme normal</p>
@@ -335,14 +336,15 @@
           </ul>
         </div>
         <div class="card">
-          <h2 class="card_title"> Full Option </h2>
+          <h2 class="card_title">Conversation Totale</h2>
           <p class="pricing">60.000 Fcfa<span class="small">/mois</span></p>
-          <p>Minimum 4 mois</p>
+          <p>Anglais partout </p>
+          <p>Minimum 6 mois</p>
           <p>Idéal pour Professionnel Débutant</p>
           <p>Apprentissage à un rythme intensif</p>
           <hr>
           <ul class="features">
-            <li>Anglais General et Technique</li>
+            <li>Anglais Général et Technique</li>
             <li>Accès au cours en ligne</li>
             <li>4 Séances de cours / semaine</li>
             <!-- <li>Accès au cours en ligne</li> -->
@@ -355,11 +357,15 @@
         </div>
       </div>
     </div>
-
-
   </div>
 </section>
+<div class="inscription-button-2 d-flex justify-content-center py-5">
+<a class="my-2 more text-white" data-bs-toggle="modal" data-bs-target="#inscription">
+  Plus de temps à perdre, <strong>tchatcher en Anglais</strong>  est à votre portée. Inscrivez-vous 😉.
+</a>
+</div>
   <!-- ======= Frequently Asked Questions Section ======= -->
+  <!--
   <section id="faq" class="faq">
     <div class="container" data-aos="fade-up">
 
@@ -379,7 +385,7 @@
             Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
           </p>
         </div>
-      </div><!-- End F.A.Q Item-->
+      </div>
 
       <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
         <div class="col-lg-5">
@@ -393,7 +399,7 @@
             dignissim.
           </p>
         </div>
-      </div><!-- End F.A.Q Item-->
+      </div>
 
       <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
         <div class="col-lg-5">
@@ -407,7 +413,7 @@
             Lectus urna duis convallis convallis tellus.
           </p>
         </div>
-      </div><!-- End F.A.Q Item-->
+      </div>
 
       <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
         <div class="col-lg-5">
@@ -421,7 +427,7 @@
             pariatur error doloribus fuga.
           </p>
         </div>
-      </div><!-- End F.A.Q Item-->
+      </div>
 
       <div class="row faq-item d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="500">
         <div class="col-lg-5">
@@ -435,10 +441,11 @@
             blandit turpis cursus in
           </p>
         </div>
-      </div><!-- End F.A.Q Item-->
+      </div>
 
     </div>
-  </section><!-- End Frequently Asked Questions Section -->
+  </section>
+   End Frequently Asked Questions Section -->
 
 
   <!-- Google font -->
