--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -160,6 +160,14 @@
   <!--  About us-->
   <main id="site-content" class="">
     <section class="mission "  id="apropos">
+      <div class="ripple-background">
+        <div class="circle xxlarge shade1"></div>
+        <div class="circle xlarge shade2"></div>
+        <div class="circle large shade3"></div>
+        <div class="circle mediun shade4"></div>
+        <div class="circle small shade5"></div>
+      </div>
+      
       <div class="section-title container">
         <h2>À Propos</h2>
         <p>Tout Savoir du Language Lab</p>
@@ -235,18 +243,16 @@
           <div class="my-card">
             <div class="img-wrapper m-2">
               <img class="program-image"
-                src="https://images.unsplash.com/photo-1627897495484-229b29feb0d5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80"
-                alt="Card image cap" />
+                src="https://news.sap.com/africa/files/2018/05/training.jpg"
+                alt="English at work" />
             </div>
             <div class="card-body d-flex flex-column align-items-start ms-3">
               <h3 class="program-name">Natural English at Work</h3>
               <p class="program-description">
-                Un programme pratique et efficace pour l'amélioration continue du niveau d'Anglais du personnel des entreprises au sein de leurs espaces de travail.
+                Un programme pratique et efficace pour l'amélioration continue du niveau d'Anglais du personnel des entreprises au sein de leur environnement de travail.
               </p>
                 <!-- <a href="/englishlang4all/clubs/home" class="course-btn">En Savoir Plus</a> -->
                 <a href="/englishlang4all/clubs/Burkina-Faso/hubs" class="course-btn">En Savoir Plus</a>
-                
-           
             </div>
           </div>
         </div>
@@ -296,6 +302,7 @@
         </div>
       </div>
     </div>
+    
 
 <!-- Customers section -->
 
@@ -315,10 +322,10 @@
                     <img src="https://i.ibb.co/n12TT1P/Auguste.jpg" class="img-fluid" alt="Auguste">
                   </div>
                   <div class="col-md-8 ps-5 align-self-center">
-                    <h2 id="image-caption" class="customer-fullname">
-                      Auguste KABORE
-                    </h2>
-                    <h5 class="customer-job">Étudiant en Commerce Internationale</h5>
+                    <h4 id="image-caption" class="customer-fullname">
+                      Auguste KABORE <span class="customer-job ms-2">Étudiant en Commerce Internationale</span>
+                    </h4>
+                    
                     <hr />
                     <h4 class="customer-paragraph-1 py-3">
                       C’est tout juste waouh !!!
@@ -344,9 +351,9 @@
                   </div>
                   <div class="col-md-8 ps-5 align-self-center">
                     <h2 id="image-caption" class="customer-fullname">
-                      Dina BADINI
+                      Dina BADINI  <span class="ms-2 customer-job">Étudiante en Medecine</span>
                     </h2>
-                    <h5 class="customer-job">Étudiante en Medecine</h5>
+                   
                     <hr />
                     <h4 class="customer-paragraph-1 py-3">
                       Tout simplement le meilleur
