--- a/views/noAccess.ejs
+++ b/views/noAccess.ejs
@@ -5,9 +5,18 @@
     <div >
         <h2 class="errortext">Accès non autorisé</h2>
     </div>
-    <div>
-        <a class="contact-nous" href="#footer">Contactez-nous</a>
-    </div>
+    <p>
+     <a class="btn contact-nous" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+          Si ceci est une erreur, contactez-nous
+     </a>
+   </p>
+   <div class="collapse" id="collapseExample">
+     <div class="card card-body">
+     <p class="px-3 py-2" style="text-align: center; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 2rem;"> +226 53344444 </p>
+     <hr>
+     <p class="px-3 py-2" style="text-align: center; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 2rem;"> afrohkteam@afrohk.com</p>
+     </div>
+   </div>
 </div>
 
 <div class="maincontainer">
