--- a/views/programs/englishlang4all/englishClubs/showClubHub.ejs
+++ b/views/programs/englishlang4all/englishClubs/showClubHub.ejs
@@ -17,9 +17,15 @@
 
   .hub-country {
     color: rgb(252, 252, 252);
-    text-shadow: 1px 2px 3px black;
+    text-shadow: 1px 2px 3px rgb(12, 1, 33);
     font-size: 4rem;
  font-family: 'Poppins', sans-serif;
+  }
+
+  .town-text{
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+
+
   }
 
   .club-type-list {
@@ -162,9 +168,9 @@
 <div class="univ-eng-clubs">
   <div class="cards-wrapper">
     <h3 class="univ-eng-club-title">
-      <span class="underline"></span>English Club Hubs <span class="underline"></span>
+      <span class="underline"></span>Natural English Clubs in <%= hubCountry %> <span class="underline"></span>
     </h3>
-    <h4 class="text-center mb-5">Cliquez la ville pour voir les clubs disponibles</h4>
+    <h4 class="text-center mb-5 town-text">Cliquez la ville pour voir les clubs disponibles</h4>
 
     <div class="d-flex justify-content-around align-items-center py-5" style="background: #43cea2;  /* fallback for old browsers */
       background: -webkit-linear-gradient(to right, #185a9d, #43cea2);  /* Chrome 10-25, Safari 5.1-6 */
