--- a/views/programs/pecp/myPecpSpace.ejs
+++ b/views/programs/pecp/myPecpSpace.ejs
@@ -186,7 +186,7 @@
     <h3 class="section-title">My courses</h3>
     <div class="container my-5">
       <div class="row">
-        <% for (let course of user.coursesTaken){ %>
+        <% for (let course of studentSpecial_courses){ %>
           <div class="col-md-4 course-wrapper">
             <div class="img-wrapper">
               <img src="<%=course.courseImageUrl %>" class="img-fluid img-thumbnail mt-2 " class="" alt="">
