--- a/public/stylesheets/courses/showCourse.css
+++ b/public/stylesheets/courses/showCourse.css
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
-  /* font-size: 80%; */
-  font-size: 100%;
+  font-size: 90%;
+  /* font-size: 100%; */
 }
 
 body {
@@ -22,7 +22,7 @@ body {
 
 .bg-img-wrapper {
   width: 100%;
-  height: 60vh;
+  height: 80vh;
   overflow: hidden;
   background-color: rgba(37, 15, 46, 0.979);
 }
@@ -80,6 +80,24 @@ body {
   }
 }
 
+
+.banner-heading {
+  color: rgb(56, 4, 115);
+  /* width: 100%; */
+  padding: 1rem;
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+  /* font-family: "Kaushan Script", cursive; */
+  font-size: 5rem;
+  font-weight: 900;
+  opacity: 0;
+  letter-spacing: 0.2rem;
+  /* line-height: 5rem; */
+  text-shadow: 1px 2px 2px rgba(255, 255, 255, 0.89);
+  animation: moveBanner 2s 1.2s forwards;
+}
+
+
 /* Instructor section */
 .intrustors-wrapper {
   padding: 2rem 3rem;
@@ -88,7 +106,7 @@ body {
 .instructor-title {
   font-family: "Poppins", sans-serif;
   font-family: "Titan One", cursive;
-  color: #833ab4;
+  color: #3519b3;
   letter-spacing: 0.1rem;
   font-size: 2rem;
 }
@@ -96,20 +114,10 @@ body {
 .underline-1 {
   width: 12rem;
   height: 0.5rem;
-  background: #833ab4;
-  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right,
-      #833ab4,
-      #fcb045,
-      #fd1d1d,
-      #833ab4);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right,
-      #833ab4,
-      #fcb045,
-      #fd1d1d,
-      #833ab4);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #1488CC;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #2B32B2, #1488CC);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #2B32B2, #1488CC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 
   text-align: center;
 }
@@ -128,7 +136,14 @@ body {
 .instructor-name {
   font-size: 1.2rem;
   font-weight: 500;
-  color: #230447;
+  letter-spacing: 0.2rem;
+  padding: 0.5rem 1rem;
+  color: #ffffff;
+  background: #1488CC;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #2B32B2, #1488CC);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #2B32B2, #1488CC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
+
   font-family: Georgia, 'Times New Roman', Times, serif;
   text-align: center;
 }
@@ -162,21 +177,6 @@ body {
   font-size: 1.5rem;
 }
 
-.banner-heading {
-  color: rgb(130, 10, 167);
-  /* width: 100%; */
-  padding: 1rem;
-  font-family: "Poppins", sans-serif;
-  text-align: center;
-  /* font-family: "Kaushan Script", cursive; */
-  font-size: 3rem;
-  font-weight: 900;
-  opacity: 0;
-  letter-spacing: 0.2rem;
-  /* line-height: 5rem; */
-  /* text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.89); */
-  animation: moveBanner 2s 1.2s forwards;
-}
 
 .courseSession {
   padding: 1rem 1.5rem 0;
@@ -200,6 +200,23 @@ body {
   text-decoration: none;
   font-weight: 500;
   font-family: "Titan One", cursive;
+}
+
+.instructor-social-icon {
+  background-color: #38045a;
+  background: #1488CC;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #2B32B2, #1488CC);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #2B32B2, #1488CC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  transition: all 0.5s;
+}
+
+.instructor-social-icon:hover {
+  background-color: #1360d3;
+}
+
+i {
+  color: #ffffff;
 }
 
 /*
