--- a/views/programs/pecp/home.ejs
+++ b/views/programs/pecp/home.ejs
@@ -83,9 +83,9 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-              <h1 class="text-center py-3 bg-primary text-white">Service Commercial Afro Language Lab</h1>
+              <h4 class="text-center py-3 bg-primary text-white">Service Commercial Afro Language Lab</h4>
               <hr>
-              <div class="d-flex  justify-content-around" style="background-color: white;">
+              <div class="d-flex  flex-wra justify-content-around" style="background-color: white;">
                 <button id="" class="bg-white">
                   <a id="" class=" fs-5" style="color: rgb(88, 7, 139);"
                     href="mailto:afrohouseofknowledge@gmail.com?"><i class="fa mx-2 p-3 fa-envelope-o" id=""
